--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -8,8 +8,8 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a ng-click="setFirstPage(true)" href="index.html"><span class="col-xs-4 navbar-brand glyphicon glyphicon-home"></span></a>
-          <span class="col-xs-4 text-center navbar-brand">WebSiteName</span>
+          <a ng-click="setPgId(0)" href="index.html"><span class="col-xs-4 navbar-brand glyphicon glyphicon-home"></span></a>
+          <span class="col-xs-4 navbar-brand"><img src="img/logo.png" class="center-block" height="30" width="80"/></span>
         </div>
 
         <div class="collapse navbar-collapse" id="myNavbar">
@@ -18,6 +18,16 @@
                 <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
             </ul>
         </div>
+        <ul ng-hide="pageId !== 2" class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="#">Bars</a></li>
+            <li role="presentation"><a href="#">Recreation</a></li>
+            <li role="presentation"><a href="#">Events</a></li>
+            <li role="presentation"><a href="#">Calendar</a></li>
+        </ul>
+        <ul ng-hide="pageId !== 3" class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="#">Restaurants</a></li>
+            <li role="presentation"><a href="#">Grocery Store</a></li>
+        </ul>
       </div>
     </nav>
 </div>
