Latest updates in Application

--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,9 +1,5 @@
-<div>
-    <nav class="navbar navbar-inverse navbar-fixed-bottom">
-      <div class="container-fluid">
-        <p class="text-center">Human Computer Interaction - Group 16 © <br/>
-            <a class="text-center" href="#">About Us</a>
-        </p>
-      </div>
-    </nav>
+<div class="footer">
+    <div class="container">
+        <p class="text-muted text-center">Human Computer Interaction - Group 16 ©</p>
+    </div>
 <div>
