--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -19,14 +19,14 @@
             </ul>
         </div>
         <ul ng-hide="pageId !== 2" class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="#">Bars</a></li>
-            <li role="presentation"><a href="#">Recreation</a></li>
-            <li role="presentation"><a href="#">Events</a></li>
-            <li role="presentation"><a href="#">Calendar</a></li>
+            <li role="presentation"><a href="#/entertainment">Bars</a></li>
+            <li role="presentation"><a href="#/entertainment">Recreation</a></li>
+            <li role="presentation"><a href="#/entertainment">Events</a></li>
+            <li role="presentation"><a href="#/entertainment">Calendar</a></li>
         </ul>
         <ul ng-hide="pageId !== 3" class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="#">Restaurants</a></li>
-            <li role="presentation"><a href="#">Grocery Store</a></li>
+            <li role="presentation"><a href="#/nutrition">Restaurants</a></li>
+            <li role="presentation"><a href="#/nutrition">Grocery Store</a></li>
         </ul>
       </div>
     </nav>
