--- a/app/css/style.css
+++ b/app/css/style.css
@@ -31,6 +31,31 @@
 	width: 100%;
 }
 
+.img-padding-0 {
+	 padding: 0;
+}
+
+.custom-body {
+	margin-bottom: 70px;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #080808;
+}
+
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.container .text-muted {
+    margin: 20px 0;
+}
+
 .img {
 	max-width:100%;
 	max-height:100%;
